--- a/src/app.html
+++ b/src/app.html
@@ -3,14 +3,98 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<title>node3.cloud — Free Web3 Developer Tools | Ethereum Utilities</title>
+		<meta name="description" content="Free browser-based Web3 developer tools: ETH unit converter, ABI encoder/decoder, Keccak256 hasher, hex converter, EIP-55 checksum, transaction flow mapper. Runs locally — no backend, no signup." />
+
+		<link rel="canonical" href="https://node3.cloud/" />
+
+		<!-- Open Graph -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://node3.cloud/" />
+		<meta property="og:title" content="node3.cloud — Free Web3 Developer Tools" />
+		<meta property="og:description" content="Browser-based Ethereum dev toolkit: unit converter, ABI encoder/decoder, Keccak256, hex converter, EIP-55 checksum, tx flow mapper. All local, no signup." />
+		<meta property="og:site_name" content="node3.cloud" />
+		<meta property="og:locale" content="en_US" />
+
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:title" content="node3.cloud — Free Web3 Developer Tools" />
+		<meta name="twitter:description" content="Browser-based Ethereum dev toolkit: unit converter, ABI encoder/decoder, Keccak256, hex converter, EIP-55 checksum, tx flow mapper." />
+
+		<!-- Theme & Icons -->
+		<meta name="theme-color" content="#0a0a0f" />
+		<meta name="color-scheme" content="dark" />
+		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+		<link rel="manifest" href="/manifest.json" />
+
+		<!-- Additional SEO -->
+		<meta name="author" content="node3.cloud" />
+		<meta name="robots" content="index, follow" />
+
+		<!-- Structured Data -->
+		<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "WebApplication",
+			"name": "node3.cloud",
+			"url": "https://node3.cloud",
+			"description": "Free browser-based Web3 developer tools: ETH unit converter, ABI encoder/decoder, Keccak256 hasher, hex converter, EIP-55 checksum, transaction flow mapper.",
+			"applicationCategory": "DeveloperApplication",
+			"operatingSystem": "Any",
+			"browserRequirements": "Requires a modern browser with JavaScript enabled",
+			"offers": {
+				"@type": "Offer",
+				"price": "0",
+				"priceCurrency": "USD"
+			},
+			"featureList": [
+				"ETH / Gwei / Wei unit converter",
+				"Hex / Decimal / Binary converter",
+				"Base64 / UTF-8 / Hex codec",
+				"Unix epoch timestamp converter",
+				"EIP-55 address checksum validator",
+				"Keccak256 hash generator",
+				"Solidity function selector generator",
+				"ABI encoder and decoder",
+				"Transaction flow mapper"
+			],
+			"softwareHelp": {
+				"@type": "WebPage",
+				"url": "https://github.com/nidhinmahesh/node3.cloud"
+			},
+			"isAccessibleForFree": true
+		}
+		</script>
+
+		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet" />
-		<title>node3.cloud — Web3 Dev Workspace</title>
-		<meta name="description" content="Your personal web3 dev workbench. Tools, history, and AI help, all saved in your browser." />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<noscript>
+			<div style="max-width:640px;margin:2rem auto;padding:1rem;font-family:monospace;color:#c8c8d0">
+				<h1>node3.cloud — Web3 Developer Tools</h1>
+				<p>A free, browser-based Ethereum developer workbench. All tools run locally with no backend and no signup required.</p>
+				<h2>Available Tools</h2>
+				<ul>
+					<li><strong>Transaction Flow Mapper</strong> — Visualize and map transaction flows on an interactive canvas</li>
+					<li><strong>Unit Converter</strong> — Convert between Wei, Gwei, and ETH</li>
+					<li><strong>Hex Converter</strong> — Convert between Hex, Decimal, and Binary</li>
+					<li><strong>Base64 Codec</strong> — Encode and decode Base64, UTF-8, and Hex</li>
+					<li><strong>Epoch Converter</strong> — Convert Unix timestamps to human-readable dates</li>
+					<li><strong>Checksum Address</strong> — Validate and convert EIP-55 checksummed Ethereum addresses</li>
+					<li><strong>Keccak256</strong> — Generate Keccak256 hashes from any input</li>
+					<li><strong>Function Selector</strong> — Generate 4-byte Solidity function selectors</li>
+					<li><strong>ABI Encoder</strong> — Encode and decode Ethereum ABI calldata</li>
+				</ul>
+				<p>Please enable JavaScript to use these tools.</p>
+				<p><a href="https://github.com/nidhinmahesh/node3.cloud">View source on GitHub</a></p>
+			</div>
+		</noscript>
 	</body>
 </html>
